@@ -69,3 +69,4 @@ Thanks
     - reports a bug.
   * OBATA Akio: reports a bug.
   * James Healy: reports bugs.
+  * Carsten Bormann: A suggestion.
